k8s/service-qa.yaml
apiVersion: v1
kind: Service
metadata:
  name: ms-artificial-intelligence-service
  namespace: qa
spec:
  selector:
    app: ms-artificial-intelligence-core
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
