k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ms-artificial-intelligence-core
  namespace: production
spec:
  selector:
    app: ms-artificial-intelligence-core
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
